internal/testdata/complex/autogen-templates/ingress-2/nginx-php.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: feature/migration
    lagoon.sh/version: v2.7.x
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag "noindex, nofollow";
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/instance: nginx-php
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: autogenerated-ingress
    lagoon.sh/autogenerated: "true"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: feature-migration
    lagoon.sh/environmentType: development
    lagoon.sh/project: content-example-com
    lagoon.sh/service: nginx-php
    lagoon.sh/service-type: nginx-php-persistent
    lagoon.sh/template: autogenerated-ingress-0.1.0
    route.lagoon.sh/source: autogenerated
  name: nginx-php
spec:
  rules:
  - host: nginx-php.feature-migration.content-example-com.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-php
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-php.feature-migration.content-example-com.example.com
    secretName: nginx-php-tls
status:
  loadBalancer: {}
